myteo/test/parser/ast/imports/empty_complex_error.exp
ERROR: test/parser/ast/imports/empty_complex_error.myte:3:10 Unexpected token "}", expected identifier
 3 | import A.{}
   |           ^